--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,14 +22,11 @@
 
     <h1>My PiRover</h1>
 
-    <p>
-        Use this document as a way to quick start any new project.<br> All you get is this message
-        and a barebones HTML document.
-    </p>
-
     <div class="liveStream">
         &nbsp;
     </div>
+
+    <div id="container"></div>
 
     <p id="log"></p>
 
@@ -53,8 +50,9 @@
 
 </div>
 
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+<script src="/js/jquery-1.8.2.min.js"></script>
+<script src="/js/jquery-ui.js"></script>
+<script src="/js//virtualjoystick/virtualjoystick.js"></script>
 <script>
     $(document).ready(function () {
         if ("WebSocket" in window) {
@@ -83,7 +81,24 @@
         };
     });
 </script>
+<script>
+    console.log("touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
+    var joystick	= new VirtualJoystick({
+        container	: document.getElementById('container'),
+        //mouseSupport	: true
+    });
+    setInterval(function(){
+        var outputEl	= document.getElementById('result');
+        outputEl.innerHTML	= '<b>Result:</b> '
+            + ' dx:'+joystick.deltaX()
+            + ' dy:'+joystick.deltaY()
+            + (joystick.right()	? ' right'	: '')
+            + (joystick.up()	? ' up'		: '')
+            + (joystick.left()	? ' left'	: '')
+            + (joystick.down()	? ' down' 	: '');
 
+    }, 1/30 * 1000);
+</script>
 
 </body>
 </html>
