--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,103 +1,154 @@
-<!DOCTYPE HTML>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PiRover</title>
-    <!-- Le styles -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-        }
-
-        .btn {
-            margin: 2px 1px;
-        }
-    </style>
-    <link href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/jquery-1.8.2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/virtualjoystick/virtualjoystick.js') }}"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
-
-<div class="container">
-
-    <h1>My PiRover</h1>
-
-    <div class="liveStream">
-        &nbsp;
+    <div class="infoPanel">
+        <div id="inputFeedback"></div>
+        <div id="serverFeedback"></div>
     </div>
 
-    <div id="container"></div>
-
-    <p id="log"></p>
+    <div class="mainPanel">
+        <div id="videoStream">
+            <video poster preload="true">
+                <source src="http://www.besnik.de/alex-free-stock-video-footage-fullhd-swedish-street-october-2012.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div id="joystick">
+        </div>
+    </div>
 
     <div class="controlPanel">
-        <button class="btn invisible" type="button">&nbsp;</button>
-        <button id="forward" class="btn btn-primary" type="button">&nbsp;</button>
-        <button class="btn invisible" type="button">&nbsp;</button>
-        <br/>
-        <button id="left" class="btn btn-primary" type="button">&nbsp;</button>
-        <button id="stop" class="btn btn-primary" type="button">&nbsp;</button>
-        <button id="right" class="btn btn btn-primary" type="button">&nbsp;</button>
-        <br/>
-        <button class="btn invisible" type="button">&nbsp;</button>
-        <button id="backward" class="btn btn-primary" type="button">&nbsp;</button>
-        <button class="btn invisible" type="button">&nbsp;</button>
-
-        <br/><br/><br/><br/>
         <button id="off" class="btn btn-primary" type="button">OFF</button>
     </div>
 
-
-</div>
-
-<script src="/js/jquery-1.8.2.min.js"></script>
-<script src="/js/jquery-ui.js"></script>
-<script src="/js//virtualjoystick/virtualjoystick.js"></script>
 <script>
     $(document).ready(function () {
         if ("WebSocket" in window) {
-            ws = new WebSocket("ws://" + document.domain + ":5000/websocket");
-            ws.onmessage = function (msg) {
+            window.ws = new WebSocket("ws://" + document.domain + "/websocket");
+            window.ws.onmessage = function (msg) {
                 var message = JSON.parse(msg.data);
-                $("p#log").html(message.output);
+                $("#log").html(message.output);
             };
         }
-        ;
-
-        // Bind send button to websocket
-        $(".controlPanel button").live("click", function () {
-            if ($(this).attr("id")) {
-                ws.send(JSON.stringify({'command': $(this).attr("id")}));
-                $(this).switchClass("btn-primary", "btn-success", 250);
-                $(this).switchClass("btn-success", "btn-primary", 250);
-            }
-        });
 
         // Cleanly close websocket when unload window
         window.onbeforeunload = function () {
-            ws.onclose = function () {
+            window.ws.onclose = function () {
             }; // disable onclose handler first
-            ws.close()
+            window.ws.close()
         };
     });
 </script>
 <script>
     console.log("touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
     var joystick	= new VirtualJoystick({
-        container	: document.getElementById('container'),
-        //mouseSupport	: true
+        container	: document.getElementById('joystick'),
+        mouseSupport	: true
     });
-    setInterval(function(){
-        var outputEl	= document.getElementById('result');
-        outputEl.innerHTML	= '<b>Result:</b> '
-            + ' dx:'+joystick.deltaX()
-            + ' dy:'+joystick.deltaY()
-            + (joystick.right()	? ' right'	: '')
-            + (joystick.up()	? ' up'		: '')
-            + (joystick.left()	? ' left'	: '')
-            + (joystick.down()	? ' down' 	: '');
+    setInterval(function () {
 
-    }, 1/30 * 1000);
+        if (!joystick.up() && !joystick.down() && !joystick.left() && !joystick.right())
+        {
+            return;
+        }
+
+        var outputEl = document.getElementById('inputFeedback');
+        var inputFeedback = "";
+
+        if (joystick.up())
+        {
+            var argument = convertStickDistanceToArgument(false, joystick.deltaY(), joystick._container);
+
+            window.ws.send(JSON.stringify({
+                'command': 'forward',
+                'argument': argument
+            }));
+            inputFeedback += inputFeedback == "" ? "" : " & ";
+            inputFeedback += "forward (" + argument + ")";
+        }
+
+        if (joystick.down())
+        {
+            var argument = convertStickDistanceToArgument(false, joystick.deltaY(), joystick._container);
+
+            window.ws.send(JSON.stringify({
+                'command': 'backward',
+                'argument': argument
+            }));
+            inputFeedback += inputFeedback == "" ? "" : " & ";
+            inputFeedback += "backward (" + argument + ")";
+        }
+
+        if (joystick.left())
+        {
+            var argument = convertStickDistanceToArgument(false, joystick.deltaX(), joystick._container);
+
+            window.ws.send(JSON.stringify({
+                'command': 'left',
+                'argument': argument
+            }));
+            inputFeedback += inputFeedback == "" ? "" : " & ";
+            inputFeedback += "left (" + argument + ")";
+        }
+
+        if (joystick.right())
+        {
+            var argument = convertStickDistanceToArgument(false, joystick.deltaX(), joystick._container);
+
+            window.ws.send(JSON.stringify({
+                'command': 'right',
+                'argument': argument
+            }));
+            inputFeedback += inputFeedback == "" ? "" : " & ";
+            inputFeedback += "right (" + argument + ")";
+        }
+
+        outputEl.innerHTML = '<b>Result:</b> ' + inputFeedback;
+    }, 250);
+
+    function convertStickDistanceToArgument(xValue, yValue, container)
+    {
+        var result = false;
+
+        if (xValue)
+        {
+            result = xValue / (container.offsetWidth/100);
+        }
+        else if(yValue)
+        {
+            result = yValue / (container.offsetHeight/100);
+        }
+
+        result *= 2;
+        if (result < 0)
+        {
+            result *= -1;
+        }
+        if (result > 100)
+        {
+            result = 100;
+        }
+        result = Math.round(result);
+
+        return result;
+    }
+
+    /*
+    function callback() {
+        document.getElementsByName('video')[0].play();
+    }
+
+    window.addEventListener("load", callback, false);
+    */
 </script>
 
 </body>
